compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__fault_tolerant_negate_bool.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 3075
expression: "\npub fn main() {\n  !!{ True || a }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  !!{ True || a }
}


----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:3:15
  │
3 │   !!{ True || a }
  │               ^

The name `a` is not in scope here.
